# ingestor

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  event-data.json
src/: interfaces.rs  main.rs  services.rs
