[package]
name = "ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
lambda_runtime = "0.5.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
chrono = "0.4.40"
